# mini-gl

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  vcpkg.json
.cache/clangd/index/: camera.cpp.913471367EB178F4.idx  camera.hpp.E1CB2C1F1898A61E.idx  main.cpp.C834F9E884C611F3.idx  shader.cpp.6D1CFDF72822533A.idx  shader.hpp.5759501E36BE6204.idx  stb_image.h.F020886D697D5024.idx
app/: example.cpp  main.cpp
app/resources/shaders/: fragmentShader.frag  grassShader.frag  loaded_model.frag  multi_lights.frag  quad.fs  quad.vs  shaderSingleColor.frag  skybox.fs  skybox.vs  spotLightfr.frag  vertexShader.vert  windowShader.frag
app/shaders/: lightColor.frag  lightShader.vert  multi_lights.frag
examples/: CMakeLists.txt  framebuffer.cpp
examples/include/learnopengl/: camera.h  model.h  shader_m.h
src/: camera.cpp  shader.cpp
src/include/: camera.hpp  shader.hpp  utils.hpp
